# routes/api.php
@@ -158,6 +158,7 @@ Route::middleware('auth.atlas')->group(function () {
         Route::get('user-project-eligibilities/by-position', [UserProjectEligibilityController::class, 'byPosition']);
         Route::get('user-project-eligibilities/by-user/dropdown', [UserProjectEligibilityController::class, 'byUserDropdown']);
         Route::get('user-project-eligibilities/by-position/dropdown', [UserProjectEligibilityController::class, 'byPositionDropdown']);
+    Route::get('user-project-eligibilities/by-position/{project_position}', [UserProjectEligibilityController::class, 'byPositionShow']);
         Route::get('user-project-eligibilities/directors/dropdown', [UserProjectEligibilityController::class, 'directorsDropdown']);
         Route::put('user-project-eligibilities/project-positions/{projectPosition}/sync', [UserProjectEligibilityController::class, 'syncPositionUsers']);
     });
